--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,18 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  deployment:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Environment
+    env: 
+      aws-access-key: tbd-secrets
+      aws-secret-access-key: tbd-secrets
+      aws-region: us-east-2
+      source-dir: ./src
+      service-name: liamwalengacom
+      target-dir: liam-walenga-com
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
