--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,10 @@ jobs:
     runs-on: ubuntu-latest
 
     # Environment
+    environment: deployment
     env: 
-      aws-access-key: tbd-secrets
-      aws-secret-access-key: tbd-secrets
+      aws-access-key: ${{ env.AWS_ACCESS_KEY_ID }}
+      aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
       aws-region: us-east-2
       source-dir: ./src
       service-name: liamwalengacom
