--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
 
     # Environment
-    environment: deployment
+    environment: deploy
     env: 
       aws-access-key: ${{ $AWS_ACCESS_KEY_ID }}
       aws-secret-access-key: ${{ $AWS_SECRET_ACCESS_KEY }}
