--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,6 @@ jobs:
 
     # Environment
     environment: deploy
-    env: 
-      aws-access-key: ${{ env.AWS_ACCESS_KEY_ID }}
-      aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-      aws-region: us-east-2
-      source-dir: ./src
-      service-name: liamwalengacom
-      target-dir: liam-walenga-com
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -36,4 +29,11 @@ jobs:
 
       - name: Copy package to S3 on AWS
         uses: qualitia-cdev/copy-to-s3@0.0.2
+        with: 
+          aws-access-key: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+          source-dir: ./src
+          service-name: liamwalengacom
+          target-dir: liam-walenga-com
       
