--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,6 @@ jobs:
           aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
           source-dir: ./src
-          service-name: liamwalengacom
-          target-dir: liam-walenga-com
+          service-name: liam-walenga-com
+          target-dir: /
       
