--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
           aws-region: us-east-2
           source-dir: ./src
           service-name: liam-walenga-com
+          target-dir: /
       
