--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,11 @@ jobs:
   deployment:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: amazon/aws-cli
+    container: 
+      image: amazon/aws-cli
+      env: 
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     environment: deploy
     steps:
       - name: Copy package to S3 on AWS
