--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     environment: deploy
     steps:
+      - uses: actions/checkout@v3
       - name: Copy package to S3 on AWS
         run: aws s3 cp ./src s3://liam-walenga-com/ --recursive
         
