--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
     environment: deploy
     steps:
       - name: Install Tar
-        run: yum install -y tar
+        run: yum install -y tar gzip
       - name: Checkout
         uses: actions/checkout@v3.1.0
       - name: Copy package to S3 on AWS
