--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,15 +20,13 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: 
-      image: amazon/aws-cli
+      image: kimjongdill/githubcli
       env: 
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-2
     environment: deploy
     steps:
-      - name: Install Tar
-        run: yum install -y tar gzip
       - name: Checkout
         uses: actions/checkout@v3.1.0
       - name: Copy package to S3 on AWS
